# try-guard

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
tests/: guard.rs  verify.rs
