[package]
name = "try-guard"
version = "0.1.1"
authors = ["Dimitri Sabadie <dimitri.sabadie@ledger.fr>"]
description = "A guard! macro inspired by the guard Alternative function from Haskell."
keywords = ["guard", "macro", "try"]
homepage = "https://github.com/phaazon/try-guard"
repository = "https://github.com/phaazon/try-guard"
documentation = "https://docs.rs/try-guard"
readme = "README.md"
license = "BSD-3-Clause"
edition = "2018"

[badges]
travis-ci = { repository = "phaazon/try-guard", branch = "master" }

[features]
default = []
test-nightly = []
